plang/testing/logs/false-incorrect/144/program144.p.p
dJ Se (X).
gcdrY (V1) :- nx (aFN9) (dh6dw (n hp3aA (re) (A)) (AGkq) Pad), (jXM f5A Cmon, yrC); ((s r56B (wh (jd U)) gv TmvG)), wf9v (lGrZ1 (uTO (Is96))).

lK :- (cfnuR vSRTG (Lt) NcHeX, xlK j ewJ, xgMKL (qLPk) (aR RjOf (iQOcX)) C Xi; g ANDVR (Xzqr) (mIbl p8x7 FS K)); nk6p (xcwE (Swc) IAbj2 (eXM KrJ (QL4)) xTt) XVi0w, lC; pcX, p (X) (W527) ttO II, ((c4JL (Hz) SgR31 i mR)); (l (ro (M)) (bLV qUKKJ JR38 (o (sGj) TlKJ6 P (m5 q))); pU (N6Kl) wvf (wc LpvH F (Vyx)) EH9N, ofS); kg V (s76dc n6qDE (G)) Z IxZMV; ftHJ, a3V O; eaXPd (hNMJG) o (KEDj), owcC; e1 l (U) TE; f1j ks3y (bn5t Q6VU (p)) Pe, cZ3P.

yyR9 :- ((dK0 E (a0Y (rUqtA (N) nyQP)) (LX6o) xWIRh, i (Ov6) FT; k1KB lJfkE h; fErh (K) (C) (idiW7 KaqT))).


xRXG9 (LulI) (GR) :- svAkt bw (X) (v (F) h (lFHi (zqJMt (Jc2) Y5Nda Q3S4) uDltu) (b (x8NNp (zBhts) (hx1zZ (NUFT) (t (mU (Q) l GmvX (bQn P4s L8WfX (eGgAB))) qU (h (EBoxd) FUg (T))) yy1vL) hFlk nZ) (io))) (S), l (bJ qHZV W8C) (FDoK5), yh9 edDv HE (DpI) e, ((hhjyB Q)); k a94Z Qh2 m8wmn, (cHBHC dlchC), ozKJw (Swu) Lpzl; goz94 (jf (dzu (qb (Xjel) (yGeWT iTkeF z8ePU) (G))) (QlxI7) N3acB) (DlOVM); ((vwEo o2; x); d0 (xgTCc i (i (sSH (HTyF) yZijz) (Vawo) (M)) (mk (NDII)))).


? xG, (h03D L5UhE (g2Tv AweCT cXPRM) f).



